conformance/1.0.0-beta/expected/errors/compact-pipe-separator.cdx
<ExpectedError category=~syntax reason=~gloss-syn-compact-pipe-separator/>
